app/assets/stylesheets/application.scss
@import "lib/govuk-frontend/dist/govuk/base";
.card {
      margin-bottom: 40px;
      background-color: #f6f6f6;
      border: 1px solid #d9dadb;
      position: relative;
      width: 100%;
      padding: 25px
    }

    .card__heading {
      margin-top: 0;
      margin-bottom: 15px
    }

    .card__description {
      margin-bottom: 0
    }

    .card--clickable {
       border-bottom-width: 5px
     }

    .card--clickable:hover,.card--clickable:active {
      cursor: pointer
    }

    .card--clickable:hover .card__heading a,.card--clickable:hover .card__link,.card--clickable:active .card__heading a,.card--clickable:active .card__link {
      color: #0f385c;
      text-decoration: none
    }

    .card--clickable:hover .card__heading a:focus,.card--clickable:hover .card__link:focus,.card--clickable:active .card__heading a:focus,.card--clickable:active .card__link:focus {
      outline: 3px solid transparent;
      color: #0b0c0c;
      background-color: #fd0;
      box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
      text-decoration: none
    }

    .card--clickable:hover {
      border-color: #cecece
    }

    .card--clickable:active {
      border-color: #cecece;
      bottom: -1px
    }

    .card-group {
      display: flex;
      flex-wrap: wrap;
      margin-bottom: 15px;
      padding: 0
    }

    @media(max-width: 48.0525em) {
      .card-group {
        margin-bottom:30px
      }
    }

    .card-group__item {
      display: flex;
      list-style-type: none;
      margin-bottom: 0
    }

    @media(max-width: 48.0525em) {
      .card-group__item {
        flex:0 0 100%
      }
    }

    .card-group__item .card {
      margin-bottom: 25px
    }

    .card--clickable {
        border-bottom-width: 4px;
    }

    .card__link--block {
        position: static;
    }

    .card__link--block::after {
        content: "";
        position: absolute;
        inset: 0;
    }

    @media(max-width: 48.0525em) {
      .card-group__item .card {
        margin-bottom:15px
      }

      .card-group__item:last-child .card {
        margin-bottom: 0
      }
    }

